maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: ':' expected but ')' found.
def suivre_mur(angle) {
                    ^Escaper:23: error: identifier expected but '}' found.
} 
^